Minor numerical change in text

--- a/LinearAndPolyRegression.ipynb
+++ b/LinearAndPolyRegression.ipynb
@@ -137,7 +137,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see, the slope we got is 2.79 which is very close to the defined slope = 3. And the intercept value by our model is 5.48 while our defined intercept is 5. (Since y = 3*X+5+noise). \n",
+    "As we can see, the slope obtained is very close to the defined slope = 3. And the intercept value by our model is also close to our defined intercept 5. (Since y = 3*X+5+noise). \n",
     "\n",
     "Now, let us see how our model predicts the values."
    ]
