Minor heading changes

--- a/LinearAndPolyRegression.ipynb
+++ b/LinearAndPolyRegression.ipynb
@@ -6,12 +6,9 @@
     "collapsed": true
    },
    "source": [
-    "<b><u><font size = \"6\"><center>Linear and Polynomial Regressions</center></font></u></b>\n",
-    "<center><b>By Sai Prajwal Kotamraju</b></center>\n",
-    "\n",
-    "\n",
-    "<b><font size = \"5\"><u>Linear Regression</u></font></b> \n",
-    "<p>\n",
+    "# Linear and Polynomial Regressions\n",
+    "By Sai Prajwal Kotamraju\n",
+    "## Linear Regression\n",
     "First step is to import the required libraries- NumPy (For mathematical manipulations) and MatPlotLib for plotting."
    ]
   },
@@ -221,9 +218,9 @@
     "collapsed": true
    },
    "source": [
-    "<u><b><font size = \"4\">Finding out the model parameters using Gradient Descent algorithms</font></b></u>\n",
+    "### Finding out the model parameters using Gradient Descent algorithms\n",
     "\n",
-    "<b><u>Batch Gradient Descent</u></b>: Involves calculations over the complete training set X at each step"
+    "#### Batch Gradient Descent: Involves calculations over the complete training set X at each step"
    ]
   },
   {
@@ -272,7 +269,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<u><b>Stochastic Gradient Descent</b></u>: Picks random instance in training set at every step and computes gradients based on that single instance. This helps in reduced computational time when compared to batch gradient descent. But because of the stochastic nature of this algorithm, the final parameter values are good, but not optimal."
+    "#### Stochastic Gradient Descent: Picks random instance in training set at every step and computes gradients based on that single instance. \n",
+    "This helps in reduced computational time when compared to batch gradient descent. But because of the stochastic nature of this algorithm, the final parameter values are good, but not optimal."
    ]
   },
   {
@@ -389,8 +387,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b><u>Mini-batch Gradient Descent</u></b>: Computes the gradient on small random sets of instances called mini-batches. It is basically a compromise between batch gradient descent and stochastic gradient descent algorithms."
+    "#### Mini-batch Gradient Descent: Computes the gradient on small random sets of instances called mini-batches. \n",
+    "It is basically a compromise between batch gradient descent and stochastic gradient descent algorithms."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
