--- a/LinearAndPolyRegression.ipynb
+++ b/LinearAndPolyRegression.ipynb
@@ -392,6 +392,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Polynomial Regression"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
